Changes in chapter 5

--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/Capa.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/Capa.tex
@@ -68,7 +68,7 @@ Co-orientador:
 		\hrulefill
 		
 		\vspace{-.375cm}
-		\centering{Natanael Nunes de Moura Junior, Dr.}
+		\centering{Natanael Nunes de Moura Junior, D.Sc.}
 		
 		\vspace{0.1cm}
 	}
@@ -107,5 +107,5 @@ Examinador:
 \begin{center}
 Rio de Janeiro
 
-Outubro de 2008
+Dezembro de 2019
 \end{center}
