--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/Preambulo.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/Preambulo.tex
@@ -66,9 +66,9 @@ Rio de Janeiro - RJ      CEP 21949-900\\
 \end{center}
       \vspace{0.5cm}
 
-\paragraph{}Os contratos de fornecimento de energia são feitos com base em quantidades fixas de MWhs que devem ser entregues ao consumidor mensalmente. Geralmente o valor produzido não é exatamente igual ao valor combinado. A diferença entre o que foi contratado e o que foi efetivamente fornecido é liquidada no mercado de curto prazo ao valor do PLD - Preço da Liquidação das Diferenças, o qual é calculado semanalmente pela CCEE.
 
-\paragraph{}Este trabalho traz uma abordagem que utiliza decomposição em séries temporais, processamento de sinais e redes neurais para estimar o valor do PLD médio mensal. Ao final do trabalho são feitas estimativas para um período de até 10 meses, trazendo o comportamento da rede conforme o número de meses a frente.
+
+\paragraph{}A energia elétrica é insumo fundamental para o desenvolvimento econômico do país. O Brasil depende bastante da energia proveniente de fontes hidrelétrica para manutenção do fornecimento contínuo. Essa fonte de energia, apesar de ser a que tem menor custo, também possui algumas características que tornam mais complexo o planejamento. Uma delas é a dependência de condições meteorológicas para que as bacias tenham água suficiente para geração de eletricidade. Uma parte da energia produzida é negociada através de leilões onde participam empresas geradoras e distribuidoras. Os contratos de fornecimento de energia são feitos com base em quantidades fixas de MWhs que devem ser entregues ao consumidor periodicamente. Geralmente o valor produzido não é exatamente igual ao valor combinado. A diferença entre o que foi contratado e o que foi efetivamente fornecido é liquidada no mercado de curto prazo ao valor do PLD - Preço da Liquidação das Diferenças, o qual é calculado semanalmente pela CCEE \cite{CCEE}. Neste trabalho, a informação sobre o preço em cada mês foi analisada como uma série temporal. Sendo assim, os dados foram tratados como sequência de observações em intervalos definidos. Além disso, foram utilizadas redes neurais artificiais multicamadas, para tratar os dados da série temporal e obter um modelo capaz de prever o valor do PLD médio mensal. O elemento básico dessa abordagem é o neurônio artificial, o qual gera um sinal na saída, conforme a combinação de sinais na entrada. Ao final do trabalho são feitas estimativas para um período de até 10 meses, trazendo o comportamento da rede conforme o número de meses a frente com erros médios variando entre 55 e 310 R\$/MW/H para o conjunto de testes.
  
 \paragraph{}
 \noindent Palavras-Chave: PLD, séries temporais, redes neurais, MLP, aprendizado de máquina, setor elétrico brasileiro.
@@ -82,9 +82,7 @@ Rio de Janeiro - RJ      CEP 21949-900\\
 \end{center}
       \vspace{0.5cm}
 
-\paragraph{}The electrical power supply contracts use fixed amount of MWHs that must be provided to the consumer monthly. The generated power usually is not equal the value agreed upon contract. The diference between the supplied and the contracted amount is liquidated using PLD -  Diferences Liquidation Price. This values is calculated by CCEE.
-
-\paragraph{}This project uses times series decomposition, signal processing and neural networks to estimate PLD's monthly value. In the last part of this work, there are estimates for a 10 months period, showing the neural network behavior for each number of months ahead.
+\paragraph{}Electrical energy is a fundamental resource for a country's economic development. Brazil highly depends on hydraulic power sources. It is the cheaper power source but also has some drawbacks like the high complexity of usage planning. The dependency on meteorological conditions to fulfill hydrographic basins is one of the difficulties faced in this context. Generators and distributors participate in auctions where a part of the produced energy is auctioned.  The negotiated contracts use a fixed amount of MWHs that must be provided to the consumer periodically. The generated power usually is not equal to the value agreed upon contract. The difference between supplied and contracted amount is liquidated using PLD -  Differences Liquidation Price. This value is calculated by CCEE\cite{CCEE} weekly. In this project, monthly price information was analyzed as a time series, meaning that the data was treated as a sequence of pre-defined  time observations. Multilayer artificial neural nets were used to process time-series data, to predict PLD's price. This project uses time series decomposition, signal processing, and neural networks to estimate PLD's mean monthly value. The main element of this approach is the artificial neuron, which generates an output by combining inputs. In the last part of this work, there are estimates for 10 months, showing the neural network behavior for each number of months ahead. Errors ranged between 50 and for test data.
 
 \paragraph{}
 \noindent Key-words: PLD, time series, neural networks, MLP, machine learning, Brazilian's Electrical Sector.
