--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/cap2.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/cap2.tex
@@ -1,7 +1,7 @@
 \paragraph{}Este capítulo tem como objetivo introduzir o leitor à estrutura do setor elétrico brasileiro, assim como expor os maiores desafios enfrentados. Também será apresentado e detalhado o problema a ser resolvido nesse projeto.
 
 \section{Histórico do Setor Elétrico Brasileiro}
-\paragraph{}No começo da década de 90 a estrutura do setor elétrico brasileiro era verticalizada, composta por grandes estatais que tinham o controle sobre toda a cadeia produtiva (geração, transmissão e distribuição). Houve então uma reestruturação do setor (RE-SEB), baseado no princípio de que "a eficiência no setor elétrico será assegurada através da competição, onde possível, e da regulamentação, onde necessária" \cite{AlteracaoModeloComercializacao}. Sendo assim, o mercado foi aberto para o setor privado. O SEB foi então divido em empresas de geração, transmissão, distribuição e comercialização de energia. Muitas empresas públicas foram leiloadas, dentre elas a a Light (21/05/1996) e a CERJ(20/11//1996) \cite{EvolucaoSetorEletrico}.
+\paragraph{}No começo da década de 90 a estrutura do setor elétrico brasileiro`- SEB era verticalizada, composta por grandes estatais que tinham o controle sobre toda a cadeia produtiva (geração, transmissão e distribuição). Houve então uma reestruturação do setor (RE-SEB), baseado no princípio de que ``a eficiência no setor elétrico será assegurada através da competição, onde possível, e da regulamentação, onde necessária" \cite{AlteracaoModeloComercializacao}. Sendo assim, o mercado foi aberto para o setor privado. O SEB foi então divido em empresas de geração, transmissão, distribuição e comercialização de energia. Muitas empresas públicas foram leiloadas, dentre elas a Light (21/05/1996) e a CERJ (20/11//1996) \cite{EvolucaoSetorEletrico}.
 
 \paragraph{}Um dos pilares do RE-SEB foi a regulamentação. Em 1996 foi criada a Agência Nacional de Energia Elétrica - ANEEL, a qual tem como função regular e fiscalizar a produção, transmissão, distribuição e comercialização de energia elétrica segundo as diretrizes definidas pelo governo federal.
 
@@ -12,15 +12,15 @@
 \begin{itemize}
 	\item { \textbf{Ministério de Minas e Energias - MME}: Reponsável pela formulação e implantação de políticas relacionadas ao setor elétrico.}
 	
-	\item{\textbf{Comitê de Monitoramento do Setor Elétrico - CMSE}: Acompanha e avalia a continuidade e segurança do suprimento elétrico em todo o território nacional}
+	\item{\textbf{Comitê de Monitoramento do Setor Elétrico - CMSE}: Acompanha e avalia a continuidade e segurança do suprimento elétrico em todo o território nacional.}
 	
-	\item{\textbf{Conselho Nacional de Política Energética - CNPE}: Formula políticas e diretrizes de energia que garantam o suprimento de energia elétrica para todo o país}
+	\item{\textbf{Conselho Nacional de Política Energética - CNPE}: Formula políticas e diretrizes de energia que garantam o suprimento de energia elétrica para todo o país.}
 	
 	\item {\textbf{Agência Nacional de Energia Elétrica - ANEEL}: Regula e fiscaliza a produção, transmissão, distribuição e comercialização de energia elétrica segundo as diretrizes definidas pelo governo federal.}
 	
 	\item{\textbf{Câmara de Comercialização de Energia Elétrica - CCEE}: Atua desde a medição de energia gerada e efetivamente consumida até a liquidação financeira dos contratos de compra e venda no curto prazo \cite{CCEE}. Anteriormente se chamava Mercado Atacadista de Energia - MAE.}
 	
-	\item{\textbf{Operador Nacional do Sistema Elétrico - ONS}: Tem como objetivo a coordenação e controle da instalações de geração e transmissão de energia elétrica no Brasil, buscando garantir a todos os agentes o livre acesso à rede de transmissão, o menor custo de expansão do sistema e as melhores condições operacionais futuras \cite{ONS}}
+	\item{\textbf{Operador Nacional do Sistema Elétrico - ONS}: Tem como objetivo a coordenação e controle da instalações de geração e transmissão de energia elétrica no Brasil, buscando garantir a todos os agentes o livre acesso à rede de transmissão, o menor custo de expansão do sistema e as melhores condições operacionais futuras \cite{ONS}.}
 	
 	\item{\textbf{Empresa de Pesquisa Energética - EPE}: Realiza pesquisas em áreas relacionadas com energia elétrica, petróleo, gás biocombustíveis e planejamento energético \cite{EPE}.}
 	
@@ -39,34 +39,13 @@
 	
 	\item{\textbf{Agentes de transmissão}: são agentes que detêm o meios de transmissão de energia.}
 	
-	\item{\textbf{Agentes de distribuição}: são agentes autorizados a distribuir energia contratada dos serviços de transmissão em uma área definida pela concessão}
+	\item{\textbf{Agentes de distribuição}: são agentes autorizados a distribuir energia contratada dos serviços de transmissão em uma área definida pela concessão.}
 	
 	\item{\textbf{Consumidores livres}: são consumidores que têm a opção de escolher o distribuidor de energia, diferente do que acontece no consumo doméstico.}
 	
 	\item{\textbf{Agentes comercializadores}: são agentes que negociam energia por meio de contratos bilaterais realizados no ambiente de contratação livre. Esse tipo de agente pode negociar a energia com outras comercializadoras, geradoras, consumidores livres e distribuidoras por meio de leilões de ajuste no ambiente de contratação regulada. Além desse, existem outros tipos de consumidores, assim como visto em \cite{CCEE}.}
 		
 \end{itemize}
-
-\begin{figure}[H]
-	\begin{center}
-		
-		\parbox[htb]{13.0cm}
-		
-		{
-			
-			\begin{center}
-				
-				\includegraphics[scale=0.6]{SistemadeTransmissao_Horizonte2017.jpg}
-				
-				\caption[\small{Mapa do Sistema Elétrico Brasileiro no horizonte de 2017 }]{\label{MapaH2017} \small{Mapa do Sistema Elétrico Brasileiro no horizonte de 2017\cite{ONS}}}
-				
-			\end{center}
-			
-		}
-		
-	\end{center}
-	
-\end{figure}
 
 \paragraph{}A reestruturação também dividiu o mercado de energia elétrica brasileiro em dois ambientes de comercialização: Ambiente de Contratação Regulada - ACR e Ambiente de Contratação Livre - ACL. O primeiro ambiente é focado na contratação de energia para consumidores residenciais e indústrias de baixo consumo em geral. As negociações são feitas através de leilões onde geralmente os contratos de fornecimento de energia tem foco no médio e longo prazo (duração maior que 5 anos). As distribuidoras são obrigadas a comprar 100\% da energia utilizada através desse meio. O segundo ambiente é focado em contratações bilaterais, de forma a trazer benefícios para grande consumidores, conforme mostrado abaixo, pois podem negociar o preço da energia direto com os geradores \cite{PRECO_SPOT}. Os agentes que podem realizar compra por esse tipo de mercado são os agentes livres, conforme mostrados na tabela a seguir:
 
@@ -89,7 +68,7 @@
 	
 \end{table}
 
-\paragraph{} Dado o dinamismo do consumo, dificilmente a energia utilizada será igual a contratada. Uma das funções da CCEE é realizar medições tanto do que é produzido quanto o que é consumido. Esta instituição concentra informações sobre o montante de energia negociado em cada contrato do SEB. A diferença entre o que foi negociado e o que foi consumido  é liquidado utilizando como multiplicador o Preço de Liquidação das Diferença - PLD, o qual será explicado mais a frente. O saldo dos agentes no mercado de curto prazo se dá pelas seguintes equações\cite{PRECO_SPOT}. 
+\paragraph{} Dado o dinamismo do consumo, dificilmente a energia utilizada será igual a contratada. Uma das funções da CCEE é realizar medições tanto do que é produzido quanto o que é consumido. Esta instituição concentra informações sobre o montante de energia negociado em cada contrato do SEB. A diferença entre o que foi negociado e o que foi consumido  é liquidado utilizando como multiplicador o Preço de Liquidação das Diferença - PLD, o qual será explicado mais a frente. O saldo dos agentes no mercado de curto prazo se dá pelas seguintes equações \cite{PRECO_SPOT}. 
 
 \begin{equation}
 	Saldo_{t, p} = SaldoEnergetico_{t, p} * PLD_t
@@ -121,10 +100,10 @@ O grande desafio do setor é utilizar a energia produzida de maneira eficiente, r
 	
 \end{figure}
 
-\paragraph{}Sendo assim, utilizar as usinas hidrelétricas - UHEs na capacidade máxima gerará o menor custo de energia possível no mês atual, porém, se no futuro for necessário utilizar outras fontes para suprir a demanda energética, o custo pode ser muito maior do que em uma situação onde a produção energética da UHE foi distribuída durantes os meses consecutivos. Por um outro lado, caso a a quantidade de água armazenada em um reservatório supere o limiar máximo do mesmo, torna-se necessário liberar o excedente para o rio, situação chamada de "vertimento". Isto é indesejável, pois resulta em um desperdício de energia barata. Portanto, um planejamento equivocado pode causar altas no PLD, o que afeta diretamente os agentes que participam do mercado de energia elétrico brasileiro.
+\paragraph{}Sendo assim, utilizar as usinas hidrelétricas - UHE na capacidade máxima gerará o menor custo de energia possível no mês atual, porém, se no futuro for necessário utilizar outras fontes para suprir a demanda energética, o custo pode ser muito maior do que em uma situação onde a produção energética da UHE foi distribuída durantes os meses consecutivos. Por um outro lado, caso a a quantidade de água armazenada em um reservatório supere o limiar máximo do mesmo, torna-se necessário liberar o excedente para o rio, situação chamada de ``vertimento". Isto é indesejável, pois resulta em um desperdício de energia barata. Portanto, um planejamento equivocado pode causar altas no PLD, o que afeta diretamente os agentes que participam do mercado de energia elétrico brasileiro.
 
 
-\paragraph{}O Brasil atualmente possui uma matriz elétrica diferente do que em geral é observado no mundo. Em média 65,2\% da energia utilizada no país vem de fontes hidráulicas, diferente do que ocorre em média no resto do mundo (aproximadamente 16,6\%), assim como visto em\cite{EPE}. Essa fonte além de ser renovável, tem impacto menor no meio ambiente e custos menores quando comparado com fontes baseadas em combustíveis fósseis. O grande ponto negativo é a característica volátil desse recurso, pois depende baste de condições climáticas, o que dificulta o planejamento para períodos longos.
+\paragraph{}O Brasil atualmente possui uma matriz elétrica diferente do que em geral é observado no mundo. Em média 65,2\% da energia utilizada no país vem de fontes hidráulicas, diferente do que ocorre em média no resto do mundo (aproximadamente 16,6\%), assim como visto em \cite{EPE}. Essa fonte além de ser renovável, tem impacto menor no meio ambiente e custos menores quando comparado com fontes baseadas em combustíveis fósseis. O grande ponto negativo é a característica volátil desse recurso, pois depende baste de condições climáticas, o que dificulta o planejamento para períodos longos.
 
 \begin{figure}[H]
 	\centering
@@ -145,7 +124,7 @@ O grande desafio do setor é utilizar a energia produzida de maneira eficiente, r
 
 \paragraph{}Uma tendência mundial no setor é a transição da rede elétrica atual para os smart grids. Este termo engloba uma série de tecnologias, tendo como foco o sensoriamento dos componentes que compõem a rede. Isto permite ter informações sobre o consumo em um período de tempo menor do que nas redes antigas, além de conseguir averiguar falhas na rede de maneira remota, mudando a postura das distribuidoras de reativa para ativa, pois torna-se possível resolver os erros antes que os clientes liguem para a concessionária.
 
-\paragraph{}Assim como visto em \cite{SmartGrid}, no ano de 2012 a ANEEL aprovou a resolução normativa N$^{\circ}$ 482 \cite{RES_NORMA_482}, que "Estabelece as condições gerais para o acesso de microgeração e minigeração distribuída aos sistemas de distribuição de energia elétrica, o sistema de compensação de energia elétrica, e dá outras providências". Desde março de 2016 é permitido que qualquer fonte de energia renovável participe do sistema de geração distribuído, não limitando somente à solar e eólica. Sendo assim a tendência é que parte da produção de energia seja proveniente de pequenos geradores, diminuindo parcialmente a dependência de grandes produtores de energia, o que pode acarretar na redução do risco de deficit de energia.
+\paragraph{}Assim como visto em \cite{SmartGrid}, no ano de 2012, a ANEEL aprovou a resolução normativa N$^{\circ}$ 482 \cite{RES_NORMA_482}, que ``Estabelece as condições gerais para o acesso de microgeração e minigeração distribuída aos sistemas de distribuição de energia elétrica, o sistema de compensação de energia elétrica, e dá outras providências". Desde março de 2016 é permitido que qualquer fonte de energia renovável participe do sistema de geração distribuído, não limitando somente à solar e eólica. Sendo assim a tendência é que parte da produção de energia seja proveniente de pequenos geradores, diminuindo parcialmente a dependência de grandes produtores de energia, o que pode acarretar na redução do risco de deficit de energia.
 
 \begin{figure}[H]
 	\centering
@@ -157,7 +136,7 @@ O grande desafio do setor é utilizar a energia produzida de maneira eficiente, r
 
 \paragraph{}Outro ponto relevante é visto no ano de 2014, onde segundo \cite{CRISE_2014}, o governo diminui, via decreto, as tarifas impostas em um momento de demanda crescente. Além disso, o atraso em obras de geração e transmissão e a escassez de chuvas colaboraram com o fato observado.
 
-\paragraph{}O PLD é calculado semanalmente e disponibilizado sexta-feira pela CCEE conforme a fórmula \ref{FormulaPrecoPLD}, com vigência na semana seguinte. Para cada um dos submercados do SIN são divulgados valores para os três patamares de carga: leve, médio e pesado. Esses estão relacionados com a hora do dia e o consumo, sendo que o patamar é pesado em horários de alto consumo e leve nos período de baixo demanda energética. O PLD mensal por subsistema é calculado também pela CCEE através da média dos preços ponderadas pelo tempo em cada patamar.
+\paragraph{}O PLD é calculado semanalmente e disponibilizado sexta-feira pela CCEE conforme a equação \ref{FormulaPrecoPLD}, com vigência na semana seguinte. Para cada um dos submercados do SIN são divulgados valores para os três patamares de carga: leve, médio e pesado. Esses estão relacionados com a hora do dia e o consumo, sendo que o patamar é pesado em horários de alto consumo e leve nos período de baixo demanda energética. O PLD mensal por subsistema é calculado também pela CCEE através da média dos preços ponderadas pelo tempo em cada patamar.
 
 \begin{equation} \label{FormulaPrecoPLD}
 PLD_{s, r, \omega} = min(max(CMO_{s, r, \omega}, PLD_{min_{ano}}), PLD_{max_{ano}})
@@ -174,7 +153,7 @@ PLD_{s, r, \omega} = min(max(CMO_{s, r, \omega}, PLD_{min_{ano}}), PLD_{max_{ano
 
 			\textbf{Variável} & \textbf{Significado}\\ \hline \vspace{-1.0mm}
 
-			$s$ & Subsitema ("N", "NE", "S", "SE\textbackslash CO") \\ \hline \vspace{-1.0mm}
+			$s$ & Subsitema (``N", `NE", ``S", ``SE\textbackslash CO") \\ \hline \vspace{-1.0mm}
 			$r$ & Patamar de carga ("leve", "médio", "pesado")
 \\ \hline \vspace{-1.0mm}
 			$w$ & Semana do mês \\ \hline \vspace{-1.0mm}
@@ -222,14 +201,14 @@ Algum deles são \cite{MANUAIS}:
 	\item{NEWAVE: Utilizado no planejamento de médio prazo (até 5 anos), com espaçamento mensal entre as previsões}
 	\item{DECOMP: Utilizado no planejamento de curto prazo (até 12) com base semanal}
 \end{itemize}
-cálculo do PLD é feito com base no CMO obtido do programa DECOMP, o qual é disponibilizado somente para agentes cadastrados no CCEE e tem como entrada alguns dados como as vazões para uma determinada bacia, o MLT - Média de Longo Termo, perdas do sistema entre outros. A lista completa de dados utilizados na entrada pode ser vista em \cite{MANUAIS}, 
+\paragraph{}O cálculo do PLD é feito com base no CMO obtido do programa DECOMP, o qual é disponibilizado somente para agentes cadastrados no CCEE e tem como entrada alguns dados como as vazões para uma determinada bacia, o MLT - Média de Longo Termo, perdas do sistema entre outros. A lista completa de dados utilizados na entrada pode ser vista em \cite{MANUAIS}, 
 
 \paragraph{}O acrônimo MLT - Média de Longo Termo refere-se à média com período anual, utilizando uma série histórica dos valores de ENA - Energia Natural Afluente para cada um dos meses desde 1931. A ENA, por sua vez é a energia que pode ser gerada através da vazão da água em uma determinada bacia.
 
 \paragraph{}A busca por um modelo matemático baseado no DECOMP que possa ser utilizado na previsão do PLD é de interesse não só dos agentes que participam do mercado elétrico brasileiro, como também de empresas indiretamente relacionadas ao setor financeiro e meio acadêmico. O entendimento da dinâmica do preço pode ajudar na formulação de novos modelos de previsão e alteração dos já existentes (DECOMP e NEWAVE). Com isso, pode-se obter melhorias nas atividades de planejamento feitas pelos órgãos.
 
 \section{Revisão bibliográfica}
-\paragraph{}Em \cite{TCC_PLD} foi utilizada uma abordagem onde são previstos os valores de energia afluente, energia proveniente de hidroelétricas, energia proveniente de usinas térmicas e carga dos subsistemas, a fim de obter o valor do PLD indiretamente. A outra forma proposta foi utilizar a própria informação sobre o PLD na previsão do mesmo. Em ambos os casos, foram utilizadas redes neurais artificiais autorregressiva não-linear - NARNET e os valores previstos são para até 3 semanas à frente.
+\paragraph{}Em \cite{TCC_PLD}, foi utilizada uma abordagem onde são previstos os valores de energia afluente, energia proveniente de hidroelétricas, energia proveniente de usinas térmicas e carga dos subsistemas, a fim de obter o valor do PLD indiretamente. A outra forma proposta foi utilizar a própria informação sobre o PLD na previsão do mesmo. Em ambos os casos, foram utilizadas redes neurais artificiais autorregressiva não-linear - NARNET e os valores previstos são para até 3 semanas à frente.
 
 \begin{figure}[H]
 	\centering
@@ -237,7 +216,7 @@ cálculo do PLD é feito com base no CMO obtido do programa DECOMP, o qual é dispo
 		\centering
 		\includegraphics[width=1\linewidth]{esquematico_previsao_indireta_pld_ufop_tcc.jpg}
 		\caption[\small{Esquematico previsão indireta do PLD.}]
-		{\label{EsquematicoPrevisaoIndiretaPLDUFOP} \small{Esquematico previsão indireta PLD\cite{TCC_PLD}.}}
+		{\label{EsquematicoPrevisaoIndiretaPLDUFOP} \small{Esquematico previsão indireta PLD \cite{TCC_PLD}.}}
 		
 	\end{subfigure}\hfill
 	\begin{subfigure}{.48\textwidth}
@@ -256,13 +235,13 @@ cálculo do PLD é feito com base no CMO obtido do programa DECOMP, o qual é dispo
 		\centering
 		\includegraphics[width=1\linewidth]{esquematico_previsao_direta_pld_ufop_tcc.jpg}
 		\caption[\small{Esquematico previsão indireta do PLD.}]
-		{\label{EsquematicoPrevisaoDiretaPLDUFOP} \small{Esquematico previsão direta do PLD\cite{TCC_PLD}.}}
+		{\label{EsquematicoPrevisaoDiretaPLDUFOP} \small{Esquematico previsão direta do PLD \cite{TCC_PLD}.}}
 	\end{subfigure}
 	\begin{subfigure}{.47\textwidth}
 		\centering
 		\includegraphics[width=1\linewidth]{previsao_direta_pld_ufop_tcc.jpg}
 		\caption[\small{Previsão direta do PLD.}]
-{\label{PrevisaoDiretaPLDUFOP} \small{Previsão direta PLD\cite{TCC_PLD}.}}
+{\label{PrevisaoDiretaPLDUFOP} \small{Previsão direta PLD \cite{TCC_PLD}.}}
 	\end{subfigure}
 	\caption{Previsão direta do PLD}
 	\label{fig:PrevisaoDiretaPLDUFOP}	
@@ -276,13 +255,13 @@ cálculo do PLD é feito com base no CMO obtido do programa DECOMP, o qual é dispo
 		\centering
 		\includegraphics[width=1\linewidth]{hibrido_tese_PLD.jpg}
 		\caption[\small{Esquematico previsão indireta do PLD.}]
-		{\label{HibridoTesePLD} \small{Esquematico modelo híbdrido de previsão do PLD. \cite{PrevisaoMultiPassos}.}}
+		{\label{HibridoTesePLD} \small{Esquematico modelo híbdrido de previsão do PLD \cite{PrevisaoMultiPassos}.}}
 	\end{subfigure}
 	\begin{subfigure}{.4659\textwidth}
 		\centering
 		\includegraphics[width=1\linewidth]{resultado_tese_previsao_PLD_se_co.jpg}
 		\caption[\small{Resultado da previsão do modelo híbrido.}]
-		{\label{ResultadoHibridoTesePLD} \small{Resultado da previsão do modelo híbrido. \cite{PrevisaoMultiPassos}.}}
+		{\label{ResultadoHibridoTesePLD} \small{Resultado da previsão do modelo híbrido \cite{PrevisaoMultiPassos}.}}
 	\end{subfigure}
 	\caption{Previsão do PLD utilizando o modelo híbrido}
 	\label{fig:ResultadoPrevisaoMultiPassos}		
@@ -324,7 +303,7 @@ cálculo do PLD é feito com base no CMO obtido do programa DECOMP, o qual é dispo
 
 \paragraph{}Em \cite{simple_forecast} são mostradas algumas abordagens simples para o problema de previsão do preço \textit{spot} (PLD é um exemplo de preço \textit{spot}) no mercado de energia de Ontário. Foi utilizada uma rede neural com uma camada escondida, uma rede neural misturada com lógica fuzzy e otimização com o algoritmo IMO. A previsão foi feita hora a hora para um período de 24 horas. Concluiu-se que a rede neural com lógica fuzzy obteve o melhor resultado, além disso a relevância das entradas para a previsão foi analisada e viu-se que as entradas mais relevantes eram a demanda e a interrupção da geração. 
 
-\paragraph{}A revista \cite{energy_magazine} traz a revisão de alguns resultados obtidos na previsão dos preços de mercados de energia elétrica como o da Noruega, Espanha e Califórnia. São utilizadas algumas abordagem lineares como AR, ARIMA e GARCH. Além disso são exibidos resultados de abordagens não lineares utilizando redes neurais. Alguns variantes mostrados são: RNA com lógica fuzzy, com filtro de Kalman extendido e com transformada de Fourier e Hartley como filtro para os dados de preço utilizados como entrada da rede. O paper \cite{price_forecast_competition} mostra os resultados para a a competição de global de previsão de energia, a qual ocorreu em 2014. São mostrados resultados tanto para previsão de preços da energia elétrica, carga de energia, energia eólica e solar.
+\paragraph{}A revista \cite{energy_magazine} traz a revisão de alguns resultados obtidos na previsão dos preços de mercados de energia elétrica como o da Noruega, Espanha e Califórnia. São utilizadas algumas abordagem lineares como AR, ARIMA e GARCH. Além disso são exibidos resultados de abordagens não lineares utilizando redes neurais. Alguns variantes mostrados são: RNA com lógica fuzzy, com filtro de Kalman extendido e com transformada de Fourier e Hartley como filtro para os dados de preço utilizados como entrada da rede. O artigo \cite{price_forecast_competition} mostra os resultados para a a competição de global de previsão de energia, a qual ocorreu em 2014. São mostrados resultados tanto para previsão de preços da energia elétrica, carga de energia, energia eólica e solar.
 
 \paragraph{}Em \cite{hibrid_price_forecasting} foi utilizada uma abordagem híbrida, onde o modelo wavelet-ARIMA seria responsável por prever a parte linear e a parte composta pelo modelo \textit{Radial Basis Function Network} - RBFN seria responsável por corrigir o erro residual proveniente da primeira parte.
  
