--- a/ProjetodeGraduacao/ProjetoFelipeClaudio/cap6.tex
+++ b/ProjetodeGraduacao/ProjetoFelipeClaudio/cap6.tex
@@ -1,4 +1,4 @@
- \paragraph{}Neste trabalho foi proposto um modelo baseado em redes neurais, com o objetivo de prever o valor médio do PLD para alguns meses a frente. Para isso, foi necessária a decomposição do sinal, deixando para o treinamento da rede somente a parte não-determinística. Foram testados diferentes métodos de extração das componentes até chegar na que foi utilizada no capítulo 5. Além disso, as MLPs foram treinadas para quantidades variadas de neurônios na camada intermediária, buscando a melhor arquitetura que solucionasse o problema proposto.
+ \paragraph{}Neste trabalho foi proposto um modelo baseado em redes neurais, com o objetivo de prever o valor médio do PLD para alguns meses a frente. Para isso, foi necessária a decomposição do sinal, deixando para o treinamento da rede somente a parte não-determinística. Foram testados diferentes métodos de extração das componentes até chegar na que foi utilizada no Capítulo 5. Além disso, as MLPs foram treinadas para quantidades variadas de neurônios na camada intermediária, buscando a melhor arquitetura que solucionasse o problema proposto.
  
  \paragraph{}Diante dos resultados obtidos com o trabalho, observou-se a dificuldade em utilizar redes neurais MLP para conjuntos de dados pequenos. Apesar disso, atingiu-se os objetivos mencionados no começo do projeto. 
   
